
 ** Figure graphic objects have a new property "Number" which is
    read-only and will return the handle (number) of the figure.
    However, if the property "IntegerHandle" has been set to "off" then
    the property will return an empty matrix ([]).

 ** Patch and surface graphic objects now use the "FaceNormals" property
    for flat lighting.

 ** "FaceNormals" and "EdgeNormals" for patch and surface graphic
    objects are now calculated automatically if necessary.

 ** Printing to raster formats now uses an opengl based method by default.
    The print options "-opengl" and "-painters" have been added (for "qt"
    toolkit only) and the corresponding figure properties "renderer" and 
    "renderermode" are now also used when printing.

 ** The print option "-RGBImage" has been added. It allows for retrieving
    image pixels of a formated figure instead of printing to raster format.

 ** Printing using the -dtiff output device will now create compressed
    images using lzw compression.  This change was made for Matlab
    compatibility.  To produce uncompressed images use the -dtiffn
    device.

 ** The FFTW library is now required to perform FFT calculations.
    The FFTPACK sources have been removed from Octave.

 ** The OSMesa library is no longer used.  To print invisible figures
    when using OpenGL graphics, the Qt QOFFSCREENSURFACE feature must be
    available and you must use the qt graphics toolkit.

 ** It is now possible to use files and folders containing Unicode
    characters in Windows.

 ** New functions added in 5.0:

      isfile
      isfolder
      movegui
      openfig
      ordeig
      savefig

 ** Legacy functions.

    The following functions have been declared legacy functions which
    means they are obsolete and should not be used in any new code.
    Unlike deprecated functions, however, their removal from Octave has
    not yet been scheduled.

      Function             | Replacement